# botolib

./: .gitignore  CHANGELOG.md  pyproject.toml
.github/workflows/: python-publish.yml
src/botolib/: __init__.py
src/botolib/resources/fetchers/: apigateway.py  apigatewayv2.py  cloudwatch_logs.py  dynamodb.py  elbv2.py  eventbridge.py  lambda_aws.py  route53.py  sns.py  sqs.py
tests/: test_apigateway.py  test_apigatewayv2.py  test_cloudwatch_logs.py  test_dynamodb.py  test_elbv2.py  test_eventbridge.py  test_lambda_aws.py  test_placeholder.py  test_route53.py  test_sns.py  test_sqs.py
