[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "botolib"
version = "1.2.0"
description = "A boto lib that enhances some aws service clients"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
    "boto3",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
]

[project.urls]
Source = "https://github.com/kejun91/botolib"

[tool.hatch.build.targets.wheel]
packages = ["src/botolib"]

[tool.ruff]
target-version = "py39"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "master"
build_command = "python -m pip install build && python -m build"
